--- a/front-end/employee-portal/something.html
+++ b/front-end/employee-portal/something.html
@@ -2,13 +2,12 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Under construction</title>
+  <title>Alex Bank - Under construction</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 <link rel="stylesheet" href="../src/construction.css">
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
 <main>
   <section class="advice">
     <h1 class="advice__title">Site under construction or maintenance </h1>
