--- a/front-end/myaccount/index.html
+++ b/front-end/myaccount/index.html
@@ -139,7 +139,6 @@
             data() {
                 return {
                     isLoggedIn: isLoggedIn(),
-                    usr_account_id: sessionStorage.getItem("account_id"),
                     first_name: sessionStorage.getItem("first_name"),
                     last_name: sessionStorage.getItem("last_name"),
                     user_role: sessionStorage.getItem("user_role"),
@@ -164,9 +163,9 @@
                 async load_account_data() {
                     try {
                         account_id = sessionStorage.getItem("account_id");
-                        const response = await fetch(`${API_BASE_URL}/account/${account_id}?usr_account_id=${this.usr_account_id}`, {
+                        const response = await fetch(`${API_BASE_URL}/account/${account_id}`, {
                             method: "GET",
-                            headers: { "token": sessionStorage.getItem("token") }
+                            headers: { "Authorization": `Bearer ${sessionStorage.getItem("token")}` }
                         });
                         if (!response.ok) {
                             throw new Error(`HTTP error! Status: ${response.status}`);
@@ -206,10 +205,10 @@
                 async loadAccountProducts() {
                     try {
                         const account_id = sessionStorage.getItem("account_id");
-                        const response = await fetch(`${API_BASE_URL}/account/${account_id}/products?usr_account_id=${this.usr_account_id}`, {
+                        const response = await fetch(`${API_BASE_URL}/account/${account_id}/products`, {
                             method: "GET", 
                             headers: {
-                                "token": sessionStorage.getItem("token")
+                                "Authorization": `Bearer ${sessionStorage.getItem("token")}`
                             }
                         });
                         const result = await response.json();
@@ -245,11 +244,11 @@
                         }
                     }
                     try {
-                        const response = await fetch(`${API_BASE_URL}/account/${this.account_data.account_id}/verification?emp_account_id=${this.usr_account_id}&new_verification_code=${new_status}`, {
+                        const response = await fetch(`${API_BASE_URL}/account/${this.account_data.account_id}/verification?new_verification_code=${new_status}`, {
                             method: "PATCH",
                             headers: {
                                 "Content-Type": "application/json",
-                                "token": sessionStorage.getItem("token")
+                                "Authorization": `Bearer ${sessionStorage.getItem("token")}`
                             }
                         });
                         if (!response.ok) {
@@ -272,11 +271,11 @@
                             differences[key] = this.contact_data[key];
                         }
                     }
-                    const response = await fetch(`${API_BASE_URL}/account/${this.account_data.account_id}/information?usr_account_id=${this.usr_account_id}`, {
+                    const response = await fetch(`${API_BASE_URL}/account/${this.account_data.account_id}/information`, {
                             method: "PATCH",
                             headers: {
                                 "Content-Type": "application/json",
-                                "token": sessionStorage.getItem("token")
+                                "Authorization": `Bearer ${sessionStorage.getItem("token")}`
                             }, 
                             body: JSON.stringify(differences)
                     });
@@ -291,11 +290,11 @@
                     if (this.account_group.account_group_code == this.initial_account_group.account_group_code) {
                         return ;
                     }
-                    const response = await fetch(`${API_BASE_URL}/account/${this.account_data.account_id}/group?usr_account_id=${this.usr_account_id}`, {
+                    const response = await fetch(`${API_BASE_URL}/account/${this.account_data.account_id}/group`, {
                             method: "PATCH",
                             headers: {
                                 "Content-Type": "application/json",
-                                "token": sessionStorage.getItem("token")
+                                "Authorization": `Bearer ${sessionStorage.getItem("token")}`
                             }, 
                             body: JSON.stringify(this.account_group)
                     });
