--- a/front-end/employee-portal/product.html
+++ b/front-end/employee-portal/product.html
@@ -21,39 +21,12 @@
                         <h2><a style="color: #000 !important; text-decoration: none; cursor: pointer;" href="index.html"><span><img height="20px" src="../img/alex_bank.png"> </span>Employee Portal</a></h2>
                     </div>
                     <div class="accordion">
-                        <div class="accordion-group" data-group="group1" v-if="['A', 'C'].includes(user_role)">
-                            <div class="accordion-header"><span><img src="../assets/chart-simple-solid.svg"></span> <span class="accordion-body-title">Executive Reports</span></div>
-                            <div class="accordion-body">
-                                <p><a>Report 1</a></p>
-                                <p><a>Report 2</a></p>
-                            </div>
-                        </div>
-                        <div class="accordion-group" data-group="group2">
-                            <div class="accordion-header"><span><img src="../assets/user-solid.svg"></span> <span class="accordion-body-title">Accounts</span></div>
-                            <div class="accordion-body">
-                                <p><a href="manage-account.html">Manage Accounts</a></p>
-                                <p><a>Create Account</a></p>
-                            </div>
-                        </div>
-                        <div class="accordion-group" data-group="group3">
-                            <div class="accordion-header"><span><img src="../assets/handshake-simple-solid.svg"></span> <span class="accordion-body-title">Client Products</span></div>
-                            <div class="accordion-body">
-                                <p><a href="">Manage Products</a></p>
-                                <p><a>Sell Product</a></p>
-                            </div>
-                        </div>
-                        <div class="accordion-group" data-group="group4">
-                            <div class="accordion-header"><span><img src="../assets/store-solid.svg"></span> <span class="accordion-body-title">Products</span></div>
-                            <div class="accordion-body">
-                                <p><a>Manage Product</a></p>
-                                <p><a>New Product</a></p>
-                            </div>
-                        </div>
-                        <div class="accordion-group" data-group="group5">
-                            <div class="accordion-header"><span><img src="../assets/building-user-solid.svg"></span> <span class="accordion-body-title">Employees</span></div>
-                            <div class="accordion-body">
-                                <p><a>Manage Employees</a></p>
-                                <p><a>Add Employee</a></p>
+                        <div v-for="(group, index) in menu" class="accordion-group" :data-group="group.dataGroup">
+                            <div v-if="group.privileges.includes(user_role)">
+                                <div class="accordion-header" @click="toggleAccordion(index)"><span><img :src="group.icon"></span> <span class="accordion-body-title">{{group.displayName}}</span></div>
+                                <div class="accordion-body" :class="{ show: openIndex === index }">
+                                    <p v-for="child in group.children"><a :href="child.url">{{child.displayName}}</a></p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -270,7 +243,9 @@
                     init_actuals: {}, 
                     actuals: {}, 
                     update_notes: null, 
-                    public_note_yn: 'Y'
+                    public_note_yn: 'Y',
+                    menu: [],
+                    openIndex: null
                 };
             },
             methods: {
@@ -541,16 +516,25 @@
                     }
                     alert("Product actuals updated succesfully!");
                     widnow.location.reload();
+                }, 
+                async loadMenu () {
+                    try {
+                        const response = await fetch("menu.json");
+                        if (!response.ok) {
+                            throw new Error(`HTTP error! status: ${response.status}`);
+                        }
+                        const menu = await response.json();
+                        this.menu = menu;
+                    } catch (error) {
+                        console.error("Failed to load menu:", error);
+                    }
+                }, 
+                toggleAccordion(index) {
+                    this.openIndex = this.openIndex === index ? null : index;
                 }
             }, 
             mounted() {
-                document.querySelectorAll('.accordion-header').forEach(header => {
-                    header.addEventListener('click', function() {
-                        const body = this.nextElementSibling;
-                        body.classList.toggle('show');
-                    });
-                });
-
+                this.loadMenu();
                 this.loadPage();
             }
         }).mount('#app');
