Added a function which verifies the token. And on each page wherever necessary, I added an invocation. Login redirect is now automatic

--- a/front-end/employee-portal/account.html
+++ b/front-end/employee-portal/account.html
@@ -415,6 +415,7 @@
                 this.loadMenu();
                 this.load_account_data(), 
                 this.loadAccountProducts();
+                redirectIfNotLoggedIn();
             }
         }).mount('#app');
     </script>
