--- a/front-end/employee-portal/manage-account.html
+++ b/front-end/employee-portal/manage-account.html
@@ -133,6 +133,7 @@
             }, 
             mounted() {
                 this.loadMenu();
+                redirectIfNotLoggedIn();
             }
         }).mount('#app');
     </script>
