--- a/front-end/employee-portal/product.html
+++ b/front-end/employee-portal/product.html
@@ -536,6 +536,7 @@
             mounted() {
                 this.loadMenu();
                 this.loadPage();
+                redirectIfNotLoggedIn();
             }
         }).mount('#app');
     </script>
