--- a/front-end/myaccount/index.html
+++ b/front-end/myaccount/index.html
@@ -202,6 +202,7 @@
             mounted() {
                 this.load_account_data(), 
                 this.loadAccountProducts();
+                redirectIfNotLoggedIn();
             },
             methods: {
                 async load_account_data() {
