--- a/front-end/myaccount/product.html
+++ b/front-end/myaccount/product.html
@@ -212,7 +212,8 @@
                 };
             },
             mounted() {
-                this.loadPage()
+                this.loadPage();
+                redirectIfNotLoggedIn();
             },
             methods: {
                 async loadPage(){
