--- a/front-end/products/info.html
+++ b/front-end/products/info.html
@@ -104,6 +104,7 @@
     async mounted() {
       this.getProduct();
       await this.fetchProduct();
+      sessionStorage.setItem("redirectURL", window.location.href);
     },
     methods: {
       getProduct() {
