--- a/front-end/employee-portal/index.html
+++ b/front-end/employee-portal/index.html
@@ -103,6 +103,7 @@
             }, 
             mounted() {
                 this.loadMenu();
+                redirectIfNotLoggedIn();
             }
         }).mount('#app');
     </script>
