Changes to the schema. Introducing product custom columns. Added mobile queries for the content margins.

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -22,6 +22,14 @@
       border-radius: 15px;
       display: block;
     }
+
+    @media (max-width: 768px) {
+        img.scrolled {
+            margin: 74px 10px 0 10px;
+            width: calc(100% - 20px);
+        }
+    }
+
   </style>
 </head>
 
