Changes to the db schema to allow for product custom columns and product specific images. Changes in the API to show those custom columns. Trigger in the db to create rows when a product instance is created.

--- a/front-end/products/info.html
+++ b/front-end/products/info.html
@@ -35,13 +35,13 @@
   <div v-if="Object.keys(product_info).length != 0" class="content">
     <div class="product-info-row">
         <div class="product-image">
-            <img :src="'../img/products/'+product_info.category_id+'.jpeg'" class="product-img" alt="Product Image">
+            <img :src="'../img/products/'+product_info.picture_name+'.jpeg'" class="product-img" alt="Product Image">
         </div>
         <div class="product-details">
             <h1 style="margin-top: 0px !important;">{{product_info.name}}</h1>
             <h3>{{product_info.description}}</h3>
             <div>Term: {{product_info.term}} month(s) | {{product_info.percentage_label}}: {{(100*product_info.percentage).toFixed(2)}}%</div> <br>
-            <div>Currency: {{product_info.currency}} | {{product_info.mon_amt_label}}: {{product_info.monetary_amount.toFixed(2)}}</div> 
+            <div>{{product_info.mon_amt_label}}: {{product_info.currency}}{{product_info.monetary_amount.toFixed(2)}}</div> 
             <button v-if="!show_appl_form" id="show-appl-button" @click="showApplication()">Apply for {{product_info.category_name}}</button>
             
             <form v-if="show_appl_form" id="appl-form" class="form-container full-width">
