--- a/front-end/products/info.html
+++ b/front-end/products/info.html
@@ -62,7 +62,12 @@
                     <span>*Please include any customization requests in the special notes field.</span>
                 </div>
                 <div class="form-group">
-                    <label for="appl_collateral"><abbr title="Read the Terms and Conditions to see if a collateral amount is required">Collateral:</abbr></label> 
+                    <label for="appl_collateral" style="height: 18px;">Collateral: <span class="info">
+                      <img src="../assets/circle-info-solid.svg" class="info-icon" alt="Info icon">
+                        <span class="extra-info">
+                          Read the Terms and Conditions to see if a collateral is applicable to your application. If not, leave this blank.
+                        </span>
+                      </span></label> 
                     <textarea v-model="appl_collateral" placeholder="Describe & Value Your Collateral"></textarea>
                 </div>
                 <div class="form-group">
